--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
     <script src="https://unpkg.com/kuroshiro-analyzer-kuromoji@1.1.0/dist/kuroshiro-analyzer-kuromoji.min.js"></script> -->
     <script src="https://unpkg.com/audiobuffer-to-wav@1.0.0/index.js"></script>
     <style>
+        html,
         body {
+            height: 100%;
+            margin: 0;
+        }
+
+        #outerContainer {
             display: flex;
             flex-direction: column;
-            height: 90vh;
+            height: 100%;
         }
 
         #transcript {
@@ -37,32 +43,6 @@
             margin-top: 35px;
             flex-grow: 0;
             flex-shrink: 0;
-        }
-
-        #speech-box {
-            position: fixed;
-            top: 5px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: #272727;
-            color: #fff;
-            margin: auto;
-            min-width: 450px;
-            max-width: 50%;
-            min-height: 20px;
-            height: 80px;
-            padding: 10px;
-            pointer-events: auto;
-            font-size: larger;
-            line-height: 1.5;
-            overflow-y: auto;
-            box-shadow: 0 10px 10px -6px rgba(0, 0, 0, 0.3);
-            border-radius: 15px;
-            display: none;
         }
 
         #mic-outer-div {
@@ -122,12 +102,11 @@
         }
 
         #all-text {
-            height: 80vh;
+            flex: 1;
             overflow-y: auto;
-            padding: 10px;
-            padding-bottom: 20px;
+            padding: 15px;
             /* font-family: 'M PLUS Rounded 1c', 'ヒラギノ角ゴ Pro W3', Meiryo, 'メイリオ', sans-serif; */
-            /* font-family: "Times New Roman"; */
+
             font-family: Hiragino Kaku Gothic ProN, Hiragino Sans, Meiryo, sans-serif;
             font-size: 23px;
             box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
@@ -194,9 +173,10 @@
         }
 
         .container-div {
-            height: 90vh;
-            flex-grow: 1;
-            flex-shrink: 1;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            height: calc(100% - 140px);
         }
 
         .play-btn {
@@ -259,84 +239,94 @@
         .hidden {
             display: none;
         }
+
+        #output-device-select {
+            margin: 0px 5px 5px 5px;
+        }
     </style>
 </head>
 
 <body>
-    <div class="container parent">
-        <!-- <div class="row">
+    <div id="outerContainer">
+
+
+        <div class="container parent">
+            <!-- <div class="row">
             <div class="one-half column">
                 <button id="record-toggle">
                     Bắt đầu ghi âm
                 </button>
             </div>
         </div> -->
-        <div class="row">
-            <div id="mic-outer-div">
-                <button class="wave btn-mic" id="record-toggle" title="Start / stop 'ESC' key">
-                    <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px"
-                        viewBox="0 0 24 24" width="24px" fill="#FFFFFF" style="margin: auto; display: block">
-                        <g>
-                            <rect fill="none" height="24" width="24"></rect>
-                            <rect fill="none" height="24" width="24"></rect>
-                            <rect fill="none" height="24" width="24"></rect>
-                        </g>
-                        <g>
-                            <g></g>
+            <div class="row">
+                <div id="mic-outer-div">
+                    <button class="wave btn-mic" id="record-toggle" title="Start / stop 'ESC' key">
+                        <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px"
+                            viewBox="0 0 24 24" width="24px" fill="#FFFFFF" style="margin: auto; display: block">
                             <g>
-                                <path
-                                    d="M12,14c1.66,0,3-1.34,3-3V5c0-1.66-1.34-3-3-3S9,3.34,9,5v6C9,12.66,10.34,14,12,14z">
-                                </path>
-                                <path
-                                    d="M17,11c0,2.76-2.24,5-5,5s-5-2.24-5-5H5c0,3.53,2.61,6.43,6,6.92V21h2v-3.08c3.39-0.49,6-3.39,6-6.92H17z">
-                                </path>
+                                <rect fill="none" height="24" width="24"></rect>
+                                <rect fill="none" height="24" width="24"></rect>
+                                <rect fill="none" height="24" width="24"></rect>
                             </g>
-                        </g>
-                    </svg><span class="ripple" style="height: 56px; width: 56px; left: 8px; top: 4px"></span>
-                </button>
-                <button class="" id="b-note-download" title="Download">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" viewBox="0 0 24 24" fill="none">
-                        <path
-                            d="M18.22 20.75H5.78C5.43322 20.7359 5.09262 20.6535 4.77771 20.5075C4.4628 20.3616 4.17975 20.155 3.94476 19.8996C3.70977 19.6442 3.52745 19.3449 3.40824 19.019C3.28903 18.693 3.23525 18.3468 3.25 18V15C3.25 14.8011 3.32902 14.6103 3.46967 14.4697C3.61033 14.329 3.80109 14.25 4 14.25C4.19892 14.25 4.38968 14.329 4.53033 14.4697C4.67099 14.6103 4.75 14.8011 4.75 15V18C4.72419 18.2969 4.81365 18.5924 4.99984 18.8251C5.18602 19.0579 5.45465 19.21 5.75 19.25H18.22C18.5154 19.21 18.784 19.0579 18.9702 18.8251C19.1564 18.5924 19.2458 18.2969 19.22 18V15C19.22 14.8011 19.299 14.6103 19.4397 14.4697C19.5803 14.329 19.7711 14.25 19.97 14.25C20.1689 14.25 20.3597 14.329 20.5003 14.4697C20.641 14.6103 20.72 14.8011 20.72 15V18C20.75 18.6954 20.5041 19.3744 20.0359 19.8894C19.5677 20.4045 18.9151 20.7137 18.22 20.75Z"
-                            fill="#000000" />
-                        <path
-                            d="M12 15.75C11.9015 15.7504 11.8038 15.7312 11.7128 15.6934C11.6218 15.6557 11.5392 15.6001 11.47 15.53L7.47 11.53C7.33752 11.3878 7.2654 11.1997 7.26882 11.0054C7.27225 10.8111 7.35096 10.6258 7.48838 10.4883C7.62579 10.3509 7.81118 10.2722 8.00548 10.2688C8.19978 10.2654 8.38782 10.3375 8.53 10.47L12 13.94L15.47 10.47C15.6122 10.3375 15.8002 10.2654 15.9945 10.2688C16.1888 10.2722 16.3742 10.3509 16.5116 10.4883C16.649 10.6258 16.7277 10.8111 16.7312 11.0054C16.7346 11.1997 16.6625 11.3878 16.53 11.53L12.53 15.53C12.4608 15.6001 12.3782 15.6557 12.2872 15.6934C12.1962 15.7312 12.0985 15.7504 12 15.75Z"
-                            fill="#000000" />
-                        <path
-                            d="M12 15.75C11.8019 15.7474 11.6126 15.6676 11.4725 15.5275C11.3324 15.3874 11.2526 15.1981 11.25 15V4C11.25 3.80109 11.329 3.61032 11.4697 3.46967C11.6103 3.32902 11.8011 3.25 12 3.25C12.1989 3.25 12.3897 3.32902 12.5303 3.46967C12.671 3.61032 12.75 3.80109 12.75 4V15C12.7474 15.1981 12.6676 15.3874 12.5275 15.5275C12.3874 15.6676 12.1981 15.7474 12 15.75Z"
-                            fill="#000000" />
-                    </svg>
-                </button>
+                            <g>
+                                <g></g>
+                                <g>
+                                    <path
+                                        d="M12,14c1.66,0,3-1.34,3-3V5c0-1.66-1.34-3-3-3S9,3.34,9,5v6C9,12.66,10.34,14,12,14z">
+                                    </path>
+                                    <path
+                                        d="M17,11c0,2.76-2.24,5-5,5s-5-2.24-5-5H5c0,3.53,2.61,6.43,6,6.92V21h2v-3.08c3.39-0.49,6-3.39,6-6.92H17z">
+                                    </path>
+                                </g>
+                            </g>
+                        </svg><span class="ripple" style="height: 56px; width: 56px; left: 8px; top: 4px"></span>
+                    </button>
+                    <button class="" id="b-note-download" title="Download">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" viewBox="0 0 24 24"
+                            fill="none">
+                            <path
+                                d="M18.22 20.75H5.78C5.43322 20.7359 5.09262 20.6535 4.77771 20.5075C4.4628 20.3616 4.17975 20.155 3.94476 19.8996C3.70977 19.6442 3.52745 19.3449 3.40824 19.019C3.28903 18.693 3.23525 18.3468 3.25 18V15C3.25 14.8011 3.32902 14.6103 3.46967 14.4697C3.61033 14.329 3.80109 14.25 4 14.25C4.19892 14.25 4.38968 14.329 4.53033 14.4697C4.67099 14.6103 4.75 14.8011 4.75 15V18C4.72419 18.2969 4.81365 18.5924 4.99984 18.8251C5.18602 19.0579 5.45465 19.21 5.75 19.25H18.22C18.5154 19.21 18.784 19.0579 18.9702 18.8251C19.1564 18.5924 19.2458 18.2969 19.22 18V15C19.22 14.8011 19.299 14.6103 19.4397 14.4697C19.5803 14.329 19.7711 14.25 19.97 14.25C20.1689 14.25 20.3597 14.329 20.5003 14.4697C20.641 14.6103 20.72 14.8011 20.72 15V18C20.75 18.6954 20.5041 19.3744 20.0359 19.8894C19.5677 20.4045 18.9151 20.7137 18.22 20.75Z"
+                                fill="#000000" />
+                            <path
+                                d="M12 15.75C11.9015 15.7504 11.8038 15.7312 11.7128 15.6934C11.6218 15.6557 11.5392 15.6001 11.47 15.53L7.47 11.53C7.33752 11.3878 7.2654 11.1997 7.26882 11.0054C7.27225 10.8111 7.35096 10.6258 7.48838 10.4883C7.62579 10.3509 7.81118 10.2722 8.00548 10.2688C8.19978 10.2654 8.38782 10.3375 8.53 10.47L12 13.94L15.47 10.47C15.6122 10.3375 15.8002 10.2654 15.9945 10.2688C16.1888 10.2722 16.3742 10.3509 16.5116 10.4883C16.649 10.6258 16.7277 10.8111 16.7312 11.0054C16.7346 11.1997 16.6625 11.3878 16.53 11.53L12.53 15.53C12.4608 15.6001 12.3782 15.6557 12.2872 15.6934C12.1962 15.7312 12.0985 15.7504 12 15.75Z"
+                                fill="#000000" />
+                            <path
+                                d="M12 15.75C11.8019 15.7474 11.6126 15.6676 11.4725 15.5275C11.3324 15.3874 11.2526 15.1981 11.25 15V4C11.25 3.80109 11.329 3.61032 11.4697 3.46967C11.6103 3.32902 11.8011 3.25 12 3.25C12.1989 3.25 12.3897 3.32902 12.5303 3.46967C12.671 3.61032 12.75 3.80109 12.75 4V15C12.7474 15.1981 12.6676 15.3874 12.5275 15.5275C12.3874 15.6676 12.1981 15.7474 12 15.75Z"
+                                fill="#000000" />
+                        </svg>
+                    </button>
+                </div>
             </div>
         </div>
-    </div>
-    <div id="wave"></div>
-    <div class="container-div">
-        <div id="all-text">
-            <p class="current-result"></p>
-            <div id="virtual-speech"></div>
+        <div class="container-div">
+            <div id="all-text">
+                <p class="current-result"></p>
+                <div id="virtual-speech"></div>
+            </div>
         </div>
-        <p id="speech-box">。。。</p>
-    </div>
 
-    <div id="replay-sample" style="display: none">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000" height="15px"
-            width="15px" version="1.1" id="Layer_1" viewBox="0 0 472.615 472.615" xml:space="preserve">
-            <g>
+        <div id="replay-sample" style="display: none">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"
+                height="15px" width="15px" version="1.1" id="Layer_1" viewBox="0 0 472.615 472.615"
+                xml:space="preserve">
                 <g>
-                    <path
-                        d="M355.232,0l-13.525,13.525l65.821,65.821h-279.17c-52.894,0-95.924,43.031-95.924,95.919v59.633h19.128v-59.633    c0-42.343,34.452-76.79,76.796-76.79h279.17l-65.821,65.821l13.525,13.525l88.91-88.91L355.232,0z" />
+                    <g>
+                        <path
+                            d="M355.232,0l-13.525,13.525l65.821,65.821h-279.17c-52.894,0-95.924,43.031-95.924,95.919v59.633h19.128v-59.633    c0-42.343,34.452-76.79,76.796-76.79h279.17l-65.821,65.821l13.525,13.525l88.91-88.91L355.232,0z" />
+                    </g>
                 </g>
-            </g>
-            <g>
                 <g>
-                    <path
-                        d="M421.053,237.714v59.632c0,42.344-34.452,76.795-76.796,76.795H65.087l65.821-65.825l-13.525-13.525l-88.909,88.914    l88.909,88.91l13.525-13.525L65.087,393.27h279.17c52.895,0,95.924-43.031,95.924-95.924v-59.632H421.053z" />
+                    <g>
+                        <path
+                            d="M421.053,237.714v59.632c0,42.344-34.452,76.795-76.796,76.795H65.087l65.821-65.825l-13.525-13.525l-88.909,88.914    l88.909,88.91l13.525-13.525L65.087,393.27h279.17c52.895,0,95.924-43.031,95.924-95.924v-59.632H421.053z" />
+                    </g>
                 </g>
-            </g>
-        </svg>
+            </svg>
+        </div>
+
+        <div id="alert" class="alert"></div>
+
     </div>
-    <div id="alert" class="alert"></div>
 
     <script>
 
@@ -351,6 +341,7 @@
         let alertDiv = document.getElementById('alert');
 
         const allText = document.getElementById("all-text");
+        const outerContainer = document.getElementById('outerContainer')
 
         let mediaRecorder;
         let recognition;
@@ -364,7 +355,7 @@
 
         // Define an array
         const speechArr = [];
-        const AUTO_RESTART = 3000;
+        const AUTO_RESTART = 5000;
         const SILENT_ARRAY = 50; //5s
         let countIdle = 0;
 
@@ -385,7 +376,7 @@
             // Create a select element and append it to the body
             const selectElement = document.createElement('select');
             selectElement.id = 'output-device-select';
-            document.body.appendChild(selectElement);
+            outerContainer.appendChild(selectElement);
 
             // Create an option element for each output device and add it to the select element
             outputDevices.forEach(device => {
@@ -790,7 +781,6 @@
                         mediaRecorder.resume();
                     }
 
-                    const speechBox = document.getElementById("speech-box");
                     let transcript = "";
                     for (let i = event.resultIndex; i < event.results.length; ++i) {
                         transcript += event.results[i][0].transcript;
